agregada la parte responsiva del home y la sección de ofertas

--- a/frontend/src/components/HomeComponents/HomeMainCard.css
+++ b/frontend/src/components/HomeComponents/HomeMainCard.css
@@ -1,5 +1,8 @@
+
 #main-home{
     background-image: url('../../assets/laboratorio.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    height: 50vh;
 }
+
